--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "expo": "~52.0.23",
+    "expo-camera": "^16.0.10",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -22,7 +24,6 @@
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
-    "expo-camera": "~16.0.10",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
