--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
